infraAccount_DataLift_former2_generate.yml
AWSTemplateFormatVersion: "2010-09-09"
Metadata:
    Generator: "former2"
Description: ""
Resources:
    EC2VPNConnection:
        Type: "AWS::EC2::VPNConnection"
        Properties:
            Type: "ipsec.1"
            StaticRoutesOnly: false
            CustomerGatewayId: !Ref EC2CustomerGateway
            Tags: 
              - 
                Key: "Name"
                Value: "dx-tgw-s2s01"

    EC2TransitGatewayRoute:
        Type: "AWS::EC2::TransitGatewayRoute"
        Properties:
            DestinationCidrBlock: "0.0.0.0/0"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTableAssociation:
        Type: "AWS::EC2::TransitGatewayRouteTableAssociation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-022a521852809f87d"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTablePropagation:
        Type: "AWS::EC2::TransitGatewayRouteTablePropagation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-022a521852809f87d"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2RouteTable:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: "vpc-01da9986f9216708f"
            Tags: 
              - 
                Key: "Name"
                Value: "transitgw test-VPC01Private Route"

    EC2RouteTable2:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: "vpc-016c8cc582077f4de"
            Tags: 
              - 
                Key: "Name"
                Value: "transitgw test-VPC02Private Route"

    EC2RouteTable3:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: "vpc-0e0fec97eeaf076b3"
            Tags: 
              - 
                Key: "Name"
                Value: "dx-tgw-rt01"

    EC2RouteTable4:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: "vpc-0bbb3bb7d04908402"
            Tags: 
              - 
                Key: "Name"
                Value: "dx-tgw-rt02"

    EC2Route:
        Type: "AWS::EC2::Route"
        Properties:
            DestinationCidrBlock: "0.0.0.0/0"
            RouteTableId: !Ref EC2RouteTable
            TransitGatewayId: !Ref EC2TransitGateway

    EC2Route2:
        Type: "AWS::EC2::Route"
        Properties:
            DestinationCidrBlock: "172.22.196.0/24"
            RouteTableId: !Ref EC2RouteTable3
            TransitGatewayId: !Ref EC2TransitGateway

    EC2Route3:
        Type: "AWS::EC2::Route"
        Properties:
            DestinationCidrBlock: "172.22.65.4/30"
            RouteTableId: !Ref EC2RouteTable4
            TransitGatewayId: !Ref EC2TransitGateway

    EC2Route4:
        Type: "AWS::EC2::Route"
        Properties:
            DestinationCidrBlock: "172.22.65.16/28"
            RouteTableId: !Ref EC2RouteTable4
            TransitGatewayId: !Ref EC2TransitGateway

    EC2TransitGateway:
        Type: "AWS::EC2::TransitGateway"
        Properties:
            Description: ""
            AmazonSideAsn: 64512
            AutoAcceptSharedAttachments: "enable"
            DefaultRouteTableAssociation: "enable"
            DefaultRouteTablePropagation: "enable"
            DnsSupport: "enable"
            VpnEcmpSupport: "enable"
            Tags: 
              - 
                Key: "Name"
                Value: "govCloud-tgw01-DataLift"

    EC2TransitGatewayRouteTable:
        Type: "AWS::EC2::TransitGatewayRouteTable"
        Properties:
            TransitGatewayId: !Ref EC2TransitGateway
            Tags: 
              - 
                Key: "Name"
                Value: "dx-tgw-rt-vpn01"

    EC2TransitGatewayRouteTable2:
        Type: "AWS::EC2::TransitGatewayRouteTable"
        Properties:
            TransitGatewayId: !Ref EC2TransitGateway
            Tags: 
              - 
                Key: "Name"
                Value: "dx-tgw-rt"

    EC2TransitGatewayAttachment:
        Type: "AWS::EC2::TransitGatewayAttachment"
        Properties:
            TransitGatewayId: !Ref EC2TransitGateway
            Tags: 
              - 
                Key: "Name"
                Value: "kunneppu-GCOM-ata"
            VpcId: "vpc-080e587dada22f0c1"
            SubnetIds: 
              - "subnet-0c77725a319f4c80b"

    EC2TransitGatewayAttachment2:
        Type: "AWS::EC2::TransitGatewayAttachment"
        Properties:
            TransitGatewayId: !Ref EC2TransitGateway
            Tags: 
              - 
                Key: "Name"
                Value: "honbetsu-GCOM-ata"
            VpcId: "vpc-0875bd05f18c47661"
            SubnetIds: 
              - "subnet-0fbcae662abcb192c"

    EC2TransitGatewayAttachment3:
        Type: "AWS::EC2::TransitGatewayAttachment"
        Properties:
            TransitGatewayId: !Ref EC2TransitGateway
            Tags: 
              - 
                Key: "Name"
                Value: "taiki-GCOM-ata"
            VpcId: "vpc-0491b016444fb1cb6"
            SubnetIds: 
              - "subnet-0a5f4520c0763f521"

    EC2NetworkInsightsAnalysis:
        Type: "AWS::EC2::NetworkInsightsAnalysis"
        Properties:
            NetworkInsightsPathId: !Ref EC2NetworkInsightsPath

    EC2NetworkInsightsAnalysis2:
        Type: "AWS::EC2::NetworkInsightsAnalysis"
        Properties:
            NetworkInsightsPathId: !Ref EC2NetworkInsightsPath2

    EC2NetworkInsightsAnalysis3:
        Type: "AWS::EC2::NetworkInsightsAnalysis"
        Properties:
            NetworkInsightsPathId: !Ref EC2NetworkInsightsPath3

    RAMResourceShare:
        Type: "AWS::RAM::ResourceShare"
        Properties:
            Name: "honbetsu-GCOM-infra-tgw"
            AllowExternalPrincipals: true
            Principals: 
              - "522814735681"
            ResourceArns: 
              - !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:transit-gateway/${EC2TransitGateway}"

    RAMResourceShare2:
        Type: "AWS::RAM::ResourceShare"
        Properties:
            Name: "taiki-GCOM-infra-tgw"
            AllowExternalPrincipals: true
            Principals: 
              - "976193254087"
            ResourceArns: 
              - !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:transit-gateway/${EC2TransitGateway}"

    RAMResourceShare3:
        Type: "AWS::RAM::ResourceShare"
        Properties:
            Name: "kunneppu-GCOM-infra-tgw"
            AllowExternalPrincipals: true
            Principals: 
              - "908027381058"
            ResourceArns: 
              - !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:transit-gateway/${EC2TransitGateway}"

    EC2CustomerGateway:
        Type: "AWS::EC2::CustomerGateway"
        Properties:
            BgpAsn: 65000
            IpAddress: "172.22.65.18"
            Type: "ipsec.1"
            Tags: 
              - 
                Key: "Name"
                Value: "dx-tgw-vpn01-cgw01"

    EC2TransitGatewayRoute2:
        Type: "AWS::EC2::TransitGatewayRoute"
        Properties:
            DestinationCidrBlock: "172.22.65.16/28"
            TransitGatewayRouteTableId: "tgw-rtb-0c350530e716b4136"
            TransitGatewayAttachmentId: "tgw-attach-07f729a9452de7926"

    EC2TransitGatewayRoute3:
        Type: "AWS::EC2::TransitGatewayRoute"
        Properties:
            DestinationCidrBlock: "172.22.65.4/30"
            TransitGatewayRouteTableId: "tgw-rtb-0c350530e716b4136"
            TransitGatewayAttachmentId: "tgw-attach-07f729a9452de7926"

    EC2TransitGatewayRoute4:
        Type: "AWS::EC2::TransitGatewayRoute"
        Properties:
            DestinationCidrBlock: "172.22.224.0/24"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"
            TransitGatewayAttachmentId: "tgw-attach-0a3cd19b71c9de203"

    EC2TransitGatewayRoute5:
        Type: "AWS::EC2::TransitGatewayRoute"
        Properties:
            DestinationCidrBlock: "172.22.229.0/24"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"
            TransitGatewayAttachmentId: "tgw-attach-09093f37e6f21bf39"

    EC2TransitGatewayRoute6:
        Type: "AWS::EC2::TransitGatewayRoute"
        Properties:
            DestinationCidrBlock: "172.22.41.0/24"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"
            TransitGatewayAttachmentId: "tgw-attach-08aa777f44a735c1f"

    EC2TransitGatewayRouteTableAssociation2:
        Type: "AWS::EC2::TransitGatewayRouteTableAssociation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-09093f37e6f21bf39"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTableAssociation3:
        Type: "AWS::EC2::TransitGatewayRouteTableAssociation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-08aa777f44a735c1f"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTableAssociation4:
        Type: "AWS::EC2::TransitGatewayRouteTableAssociation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-0a3cd19b71c9de203"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTableAssociation5:
        Type: "AWS::EC2::TransitGatewayRouteTableAssociation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-07f729a9452de7926"
            TransitGatewayRouteTableId: "tgw-rtb-0c350530e716b4136"

    EC2TransitGatewayRouteTablePropagation2:
        Type: "AWS::EC2::TransitGatewayRouteTablePropagation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-08aa777f44a735c1f"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTablePropagation3:
        Type: "AWS::EC2::TransitGatewayRouteTablePropagation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-09093f37e6f21bf39"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTablePropagation4:
        Type: "AWS::EC2::TransitGatewayRouteTablePropagation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-0a3cd19b71c9de203"
            TransitGatewayRouteTableId: "tgw-rtb-0228b4236053ed018"

    EC2TransitGatewayRouteTablePropagation5:
        Type: "AWS::EC2::TransitGatewayRouteTablePropagation"
        Properties:
            TransitGatewayAttachmentId: "tgw-attach-07f729a9452de7926"
            TransitGatewayRouteTableId: "tgw-rtb-0c350530e716b4136"

    EC2NetworkInsightsPath:
        Type: "AWS::EC2::NetworkInsightsPath"
        Properties:
            Protocol: "tcp"
            Source: "tgw-attach-08aa777f44a735c1f"

    EC2NetworkInsightsPath2:
        Type: "AWS::EC2::NetworkInsightsPath"
        Properties:
            Protocol: "tcp"
            Source: "tgw-attach-07f729a9452de7926"

    EC2NetworkInsightsPath3:
        Type: "AWS::EC2::NetworkInsightsPath"
        Properties:
            Protocol: "tcp"
            Source: "tgw-attach-08aa777f44a735c1f"
            Tags: 
              - 
                Key: "Name"
                Value: "miura0206"

    LogsLogStream:
        Type: "AWS::Logs::LogStream"
        Properties:
            LogGroupName: "/aws/vpc/miura-tgw-flowlog"
            LogStreamName: "tgw-attach-044327cba9bc2fe70-all"

    LogsLogStream2:
        Type: "AWS::Logs::LogStream"
        Properties:
            LogGroupName: "/aws/vpc/miura-tgw-flowlog"
            LogStreamName: "tgw-attach-0af0e67d46bd0b419-all"

    LogsLogStream3:
        Type: "AWS::Logs::LogStream"
        Properties:
            LogGroupName: "/aws/vpc/miura-tgw-flowlog"
            LogStreamName: "tgw-attach-0dc8ebc6d5ed3f12d-all"

    LogsLogStream4:
        Type: "AWS::Logs::LogStream"
        Properties:
            LogGroupName: "/aws/vpc/miura-site-to-site-log"
            LogStreamName: "vpn-039a4dfffbddbc792-35.79.136.247-IKE.log"

    LogsLogStream5:
        Type: "AWS::Logs::LogStream"
        Properties:
            LogGroupName: "/aws/vpc/miura-site-to-site-log"
            LogStreamName: "vpn-097e6285557d985dd-13.113.222.218-IKE.log"

    LogsLogStream6:
        Type: "AWS::Logs::LogStream"
        Properties:
            LogGroupName: "/aws/vpc/miura-site-to-site-log"
            LogStreamName: "vpn-0b030e0aa4277dce8-52.193.27.72-IKE.log"

    ConfigConfigRule:
        Type: "AWS::Config::ConfigRule"
        Properties:
            ConfigRuleName: "securityhub-ec2-client-vpn-connection-log-enabled-50875822"
            Description: "Checks if AWS Client VPN endpoint has client connection logging enabled. The rule is NON_COMPLIANT if 'Configuration.ConnectionLogOptions.Enabled' is set to false."
            Scope: 
                ComplianceResourceTypes: 
                  - "AWS::EC2::ClientVpnEndpoint"
            Source: 
                Owner: "AWS"
                SourceIdentifier: "EC2_CLIENT_VPN_CONNECTION_LOG_ENABLED"
            InputParameters: "{}"

    ConfigConfigRule2:
        Type: "AWS::Config::ConfigRule"
        Properties:
            ConfigRuleName: "securityhub-ec2-vpn-connection-logging-enabled-ffe44651"
            Description: "Checks if AWS Site-to-Site VPN connections have Amazon CloudWatch logging enabled for both tunnels. The rule is NON_COMPLIANT if a Site-to-Site VPN connection does not have CloudWatch logging enabled for either or both tunnels."
            Scope: 
                ComplianceResourceTypes: 
                  - "AWS::EC2::VPNConnection"
            Source: 
                Owner: "AWS"
                SourceIdentifier: "EC2_VPN_CONNECTION_LOGGING_ENABLED"
            InputParameters: "{}"

    ConfigConfigRule3:
        Type: "AWS::Config::ConfigRule"
        Properties:
            ConfigRuleName: "securityhub-vpc-vpn-2-tunnels-up-04a32806"
            Description: "This control checks that both VPN tunnels provided by AWS Site-to-Site VPN are in UP status. The control fails if one or both tunnels are in DOWN status."
            Scope: {}
            Source: 
                Owner: "AWS"
                SourceIdentifier: "VPC_VPN_2_TUNNELS_UP"
            InputParameters: "{}"
